# zbot_v1

./: README.md
base_controller/: CMakeLists.txt  package.xml  package.xml~
base_controller/src/: base_controller.cpp  base_controller.cpp~  odometry_node.cpp  serial_publish.cpp  serial_recieve.cpp  vel_transform.cpp  vel_transform_smoother.cpp
bringup/: CMakeLists.txt  package.xml
bringup/launch/: base_control.launch  base_control.launch~  gmapping.launch~  keyboard_teleop.launch~  keyboard_teleop_zbot.launch  kinect2_depthimage_to_laserscan.launch  kinect2_depthimage_to_laserscan.launch~  kinect2_fake_laser.launch~  kinect2_fake_laser_openni2_v2.launch~  kinect2_gmapping.launch  kinect2_gmapping.launch~  kinect2_pointcloud_to_laserscan.launch  kinect2_pointcloud_to_laserscan.launch~  launch文件说明.txt  launch文件说明.txt~  robot_slam.launch~  rplidar_gmapping.launch  rplidar_gmapping.launch~  rplidar_slam.launch
bringup/rviz/: kinect2_depthimage_to_laserscan_view.rviz  kinect2_gmapping.rviz  rplidar_gmapping.rviz
keyboard_teleop_zbot/: CMakeLists.txt  CMakeLists.txt~  keyboard_teleop_zbot.py  keyboard_teleop_zbot.py~  package.xml  package.xml~  teleop_twist_keyboard.py~  注意.txt
kinect2/kinect2_to_laserscan-master/: CMakeLists.txt  README.md  nodelets.xml  package.xml
kinect2/kinect2_to_laserscan-master/include/kinect2_to_laserscan/: kinect2_to_laserscan_nodelet.h
kinect2/kinect2_to_laserscan-master/launch/: kinect2_node.launch  kinect2_nodelet.launch
kinect2/kinect2_to_laserscan-master/src/: kinect2_to_laserscan_node.cpp  kinect2_to_laserscan_nodelet.cpp
rplidar_ros/src/: node.cpp~
