<?xml version="1.0"?>
<package>
  <name>keyboard_teleop_zbot</name>
  <version>0.0.0</version>
  <description>Generic keyboard teleop for twist robots.</description>

  <maintainer email="forrest@todo.todo">forrest</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
</package>
